cluster/default/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt'
    external-dns.alpha.kubernetes.io/hostname: 'transmission.home.jamesmoriarty.xyz'
spec:
  tls:
  - hosts:
    - 'transmission.home.jamesmoriarty.xyz'
    secretName: transmission-tls
  rules:
  - host: 'transmission.home.jamesmoriarty.xyz'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              number: 80
